--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -10,24 +10,32 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Mar 24, 2022
 
-Tested:  Mar 24, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  Mar 27, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 
-<!--
-    My first Personal Coding Buddy Comment: 
-    "Hello, everyone! For those who don’t know me, my name is Hosanna Tesfaye and I’m a 
-    senior majoring in IT at Mizzou! I’m looking forward to working with you!"
-    So do we just ask a question in the HTML comments for others to answer and then send back to the sender?
--->
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <title>About Me</title>
+        <title>About</title>
 
         <style>
-            img {height: 250px;}
+            img {
+                height: 250px;
+            }
+            body{
+                background-color: skyblue;
+            }
+            header{
+                text-align: center;
+            }
+            main{
+                text-align: center;
+            }
+            footer{
+                text-align: center;
+            }
         </style>
     </head>
 
@@ -35,8 +43,13 @@ Tested:  Mar 24, 2022; Passed on Safari and Chrome browsers.
         <h1>Hosanna Tesfaye</h1>
         <img src="HT_About.JPG" alt="Profile Pic">
         <h3>Who am I?</h3>
-
-        
+        <p>My name is Hosanna Tesfaye, and I am an aspiring female African-American engineer. I was born in St.Louis, Missouri where I 
+        grew up for the first two years of my life before I moved to Jefferson City, Missouri was was raised for the morjity of my childhood.
+        Creating and stylizing websites fascinates me, as websites are integral resources of the Web that we utilize whenever we search for something on the web. 
+        I also have a creative side and love making art, whether visual, graphic, or musical. My hobbies include playing the piano, 
+        flute, singing, and solving puzzles. I love to sit down and analyze all the puzzle pieces before I assemble the entire image piece by piece. 
+        The feeling of completing the puzzle never fails to satisfy me.
+        </p>
         <p>
             I am an Information Technology undergraduate senior studying at <em>Mizzou University</em> to earn my Bachelor of Science in the College of 
             Engineering, along with a certificate in Media Design and Technology, Information Systems, and Cybersecurity. 
