--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -18,22 +18,7 @@ Modified/Tested:  Mar 27, 2022; Passed on Safari and Chrome browsers.
     <head>
         <meta charset="utf-8">
         <title>About Me</title>
-
-        <style>
-            body{
-                background-color: skyblue;
-            }
-            header{
-                text-align: center;
-            }
-            main{
-                text-align: center;
-            }
-            footer{
-                text-align: center;
-            }
-
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
