--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -19,30 +19,14 @@ Modified/Tested:  Mar 27, 2022; Passed on Safari and Chrome browsers.
     <head>
         <meta charset="utf-8">
         <title>About</title>
-
-        <style>
-            img {
-                height: 250px;
-            }
-            body{
-                background-color: skyblue;
-            }
-            header{
-                text-align: center;
-            }
-            main{
-                text-align: center;
-            }
-            footer{
-                text-align: center;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Hosanna Tesfaye</h1>
+        <h1 class="about">Hosanna Tesfaye</h1>
         <img src="HT_About.JPG" alt="Profile Pic">
         <h3>Who am I?</h3>
+        <main>
         <p>My name is Hosanna Tesfaye, and I am an aspiring female African-American engineer. I was born in St.Louis, Missouri where I 
         grew up for the first two years of my life before I moved to Jefferson City, Missouri was was raised for the morjity of my childhood.
         Creating and stylizing websites fascinates me, as websites are integral resources of the Web that we utilize whenever we search for something on the web. 
@@ -61,7 +45,9 @@ Modified/Tested:  Mar 27, 2022; Passed on Safari and Chrome browsers.
             - Amelia Earhart
         <p>
             <a href="https://drive.google.com/file/d/1JXbeOKoQi3kTUWXR699QgJud2H9l7iNc/view?usp=sharing" target="_blank">Click here</a>
-            if you'd like to know more about me!
+            if you'd like to know more about me! <br>
+            Or, if you'd like to read my resume, <a href="Tesfayeresume.pdf" target="_blank">click here</a>.
         </p>
+    </main>
     </body>
 </html>
