--- a/islt_7310/Tesfaye_Template.html
+++ b/islt_7310/Tesfaye_Template.html
@@ -37,6 +37,14 @@ Modified/Tested:  Mar 27, 2022; Passed on Safari and Chrome browsers.
             
 </head>
 <body>
-    
+    <header>
+        <h1>Header for Page</h1>
+        <h3>Subheader</h3>
+    </header>
+    <footer>
+        Author: Hosanna Tesfaye<br>
+        If you have any further questions, please contact: <a href="mailto:hhthk7@umsystem.edu">hhthk7@umsystem.edu</a><br>
+        &copy; Copyright 2022 Hosanna Tesfaye's Portfolio
+    </footer>
 </body>
 </html>
