--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -18,12 +18,17 @@ Modified/Tested:  Mar 27, 2022; Passed on Safari and Chrome browsers.
     <head>
         <meta charset="utf-8">
         <title>About Me</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="nav.css">
     </head>
 
     <body>
         <nav>
-            <a href="about.html">About</a>
+            <ul>
+                <li><a href="index.html" id="link">Home</a></li>
+                <li><a href="about.html" id="link">About</a></li>
+                <li><a href="#projects.html" id="link">Projects</a></li>
+            </ul>
         </nav>
 
         <header>
