--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -26,8 +26,8 @@ Modified/Tested:  Mar 27, 2022; Passed on Safari and Chrome browsers.
         <nav>
             <ul>
                 <li><a href="index.html" id="link">Home</a></li>
-                <li><a href="about.html" id="link">About</a></li>
-                <li><a href="#projects.html" id="link">Projects</a></li>
+                <li><a href="about.html" id="link2">About</a></li>
+                <li><a href="#projects.html" id="link3">Projects</a></li>
             </ul>
         </nav>
 
