--- a/islt_7310/Tesfaye_Template.html
+++ b/islt_7310/Tesfaye_Template.html
@@ -41,6 +41,8 @@ Modified/Tested:  Mar 27, 2022; Passed on Safari and Chrome browsers.
         <h1>Header for Page</h1>
         <h3>Subheader</h3>
     </header>
+    <main>
+    </main>
     <footer>
         Author: Hosanna Tesfaye<br>
         If you have any further questions, please contact: <a href="mailto:hhthk7@umsystem.edu">hhthk7@umsystem.edu</a><br>
