--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Mar 27, 2022
 
-Modified/Tested:  Mar 27, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  Apr 13, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 <!DOCTYPE html>
@@ -25,9 +25,9 @@ Modified/Tested:  Mar 27, 2022; Passed on Safari and Chrome browsers.
     <body>
         <nav>
             <ul>
-                <li><a href="index.html" id="link">Home</a></li>
-                <li><a href="about.html" id="link2">About</a></li>
-                <li><a href="#projects.html" id="link3">Projects</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#project.html">Projects</a></li>
             </ul>
         </nav>
 
