--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -27,7 +27,7 @@ Modified/Tested:  Apr 13, 2022; Passed on Safari and Chrome browsers.
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#project.html">Projects</a></li>
+                <li><a href="project.html">Projects</a></li>
             </ul>
         </nav>
 
