--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -33,6 +33,8 @@ Modified/Tested:  Apr 13, 2022; Passed on Safari and Chrome browsers.
                     <li><a href="#">Link 3</a></li>
                 </ul>
             </li>
+            <li><a href="#">Reflections</a><li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 
