--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -2,15 +2,15 @@
 
 Title:  Template Page
 
-Use:  To create a template for the website to follow; basically its theme.
+Use:  To give a list of my previous projects and achievments.
 
 Author:  Hosanna Tesfaye
 
 School/Term:  Mizzou University, Spring 2022
 
-Developed: Mar 27, 2022
+Developed: Apr 11, 2022
 
-Modified/Tested:  Apr 13, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  Apr 17, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 <!DOCTYPE html>
@@ -33,14 +33,14 @@ Modified/Tested:  Apr 13, 2022; Passed on Safari and Chrome browsers.
                     <li><a href="#">Link 3</a></li>
                 </ul>
             </li>
-            <li><a href="#">Reflections</a><li>
+            <li><a href="reflection.html">Reflections</a><li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 
     <header>
         <h1>Projects</h1>
-        <h3>Subheader</h3>
+        <h3>The Wonders of Information Technology!</h3>
     </header>
 
     <main>
