--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -17,7 +17,7 @@ Modified/Tested:  Apr 17, 2022; Passed on Safari and Chrome browsers.
 <html lang="en-US">
 <head>
         <meta charset="utf-8">
-        <title>Projects</title>
+        <title>Reflection</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="nav.css">
 </head>
