--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Mar 24, 2022
 
-Modified/Tested:  Apr 13, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  Apr 18, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 
@@ -20,9 +20,26 @@ Modified/Tested:  Apr 13, 2022; Passed on Safari and Chrome browsers.
         <meta charset="utf-8">
         <title>About</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="nav.css">
     </head>
 
     <body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="project.html">Projects</a>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </ul>
+                </li>
+                <li><a href="reflection.html">Reflections</a><li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
         <h1 class="about">Hosanna Tesfaye</h1>
         <img src="HT_About.JPG" alt="Profile Pic">
         <h3>Who am I?</h3>
