--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Mar 27, 2022
 
-Modified/Tested:  Apr 13, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  Apr 18, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 <!DOCTYPE html>
@@ -27,7 +27,15 @@ Modified/Tested:  Apr 13, 2022; Passed on Safari and Chrome browsers.
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#project.html">Projects</a></li>
+                <li><a href="project.html">Projects</a>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </ul>
+                </li>
+                <li><a href="reflection.html">Reflections</a><li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
 
