--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -21,6 +21,11 @@ Modified/Tested:  Apr 18, 2022; Passed on Safari and Chrome browsers.
         <title>About</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
+
+        <!-- Google Font: Roboto Stylesheet-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -40,9 +45,12 @@ Modified/Tested:  Apr 18, 2022; Passed on Safari and Chrome browsers.
             </ul>
         </nav>
 
+        <header>
         <h1 class="about">Hosanna Tesfaye</h1>
         <img src="HT_About.JPG" alt="Profile Pic">
         <h3>Who am I?</h3>
+        </header>
+
         <main>
         <p>My name is Hosanna Tesfaye, and I am an aspiring female African-American engineer. I was born in St.Louis, Missouri where I 
         grew up for the first two years of my life before I moved to Jefferson City, Missouri was was raised for the morjity of my childhood.
@@ -60,11 +68,17 @@ Modified/Tested:  Apr 18, 2022; Passed on Safari and Chrome browsers.
             <br>
             <blockquote cite="https://ameliaearhart.com/quotes/"><em>The most effective way to do it is to do it.</em></blockquote>
             - Amelia Earhart
-        <p>
+        <p class="credentials">
             <a href="https://drive.google.com/file/d/1JXbeOKoQi3kTUWXR699QgJud2H9l7iNc/view?usp=sharing" target="_blank">Click here</a>
             if you'd like to know more about me! <br>
             Or, if you'd like to read my resume, <a href="Tesfayeresume.pdf" target="_blank">click here</a>.
         </p>
     </main>
+
+    <footer>
+        Author: Hosanna Tesfaye<br>
+        If you have any further questions, please contact: <a href="mailto:hhthk7@umsystem.edu">hhthk7@umsystem.edu</a><br>
+        &copy; Copyright 2022 Hosanna Tesfaye's Portfolio
+    </footer>
     </body>
 </html>
