--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -46,7 +46,7 @@ Modified/Tested:  Apr 18, 2022; Passed on Safari and Chrome browsers.
         </nav>
 
         <header>
-        <h1 class="about">Hosanna Tesfaye</h1>
+        <h1>Hosanna Tesfaye</h1>
         <img src="HT_About.JPG" alt="Profile Pic">
         <h3>Who am I?</h3>
         </header>
