--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Mar 24, 2022
 
-Modified/Tested:  Apr 18, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  Apr 24, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 
@@ -18,6 +18,7 @@ Modified/Tested:  Apr 18, 2022; Passed on Safari and Chrome browsers.
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
@@ -29,7 +30,10 @@ Modified/Tested:  Apr 18, 2022; Passed on Safari and Chrome browsers.
     </head>
 
     <body>
-        <nav>
+        <nav id="nav_ham">
+            <label for="hamburger">&#9776;</label>
+            <input type="checkbox" id="hamburger"/>
+            <div id="hamburgeritems">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -43,6 +47,7 @@ Modified/Tested:  Apr 18, 2022; Passed on Safari and Chrome browsers.
                 <li><a href="reflection.html">Reflections</a><li>
                 <li><a href="#">Contact</a></li>
             </ul>
+        </div>
         </nav>
 
         <header>
