--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Mar 24, 2022
 
-Modified/Tested:  Apr 24, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 
@@ -39,9 +39,8 @@ Modified/Tested:  Apr 24, 2022; Passed on Safari and Chrome browsers.
                 <li><a href="about.html">About</a></li>
                 <li><a href="project.html">Projects</a>
                     <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
+                        <li><a href="undergraduate_research.html">Undergraduate Research</a></li>
+                        <li><a href="school_project.html">School Projects</a></li>
                     </ul>
                 </li>
                 <li><a href="reflection.html">Reflections</a><li>
