--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Mar 27, 2022
 
-Modified/Tested:  Apr 24, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 <!DOCTYPE html>
@@ -18,9 +18,10 @@ Modified/Tested:  Apr 24, 2022; Passed on Safari and Chrome browsers.
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About Me</title>
+        <title>Home</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="nav.css">
+        <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
     </head>
 
     <body>
@@ -33,9 +34,8 @@ Modified/Tested:  Apr 24, 2022; Passed on Safari and Chrome browsers.
                 <li><a href="about.html">About</a></li>
                 <li><a href="project.html">Projects</a>
                     <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
+                        <li><a href="undergraduate_research.html">Undergraduate Research</a></li>
+                        <li><a href="school_project.html">School Projects</a></li>
                     </ul>
                 </li>
                 <li><a href="reflection.html">Reflections</a><li>
@@ -59,9 +59,11 @@ Modified/Tested:  Apr 24, 2022; Passed on Safari and Chrome browsers.
         </p>
     </main>
 
-        <footer>
-            Author: Hosanna Tesfaye<br>
-            If you have any further questions, please contact: <a href="mailto:hhthk7@umsystem.edu">hhthk7@umsystem.edu</a><br>
-            &copy; Copyright 2022 Hosanna Tesfaye's Portfolio
-        </footer>
+    <footer>
+        Author: Hosanna Tesfaye<br>
+        If you have any further questions, feel free to reach out! <br>
+        <img src="images/mail.png" class="mail" alt="Mail">Email: <a href="mailto:hhthk7@umsystem.edu">Hosanna Tesfaye</a> at <a href="mailto:hhthk7@umsystem.edu">hhthk7@umsystem.edu</a><br>
+        <img src="images/phone.png" class="phone" alt="Telephone">Phone: 1+888-888-8888<br>
+        &copy; Copyright 2022 Hosanna Tesfaye's Portfolio
+    </footer>
     </body>
