--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -81,7 +81,9 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
 
     <footer>
         Author: Hosanna Tesfaye<br>
-        If you have any further questions, please contact: <a href="mailto:hhthk7@umsystem.edu">hhthk7@umsystem.edu</a><br>
+        If you have any further questions, feel free to reach out! <br>
+        <img src="images/mail.png" class="mail" alt="Mail">Email: <a href="mailto:hhthk7@umsystem.edu">Hosanna Tesfaye</a> at <a href="mailto:hhthk7@umsystem.edu">hhthk7@umsystem.edu</a><br>
+        <img src="images/phone.png" class="phone" alt="Telephone">Phone: 1+888-888-8888<br>
         &copy; Copyright 2022 Hosanna Tesfaye's Portfolio
     </footer>
     </body>
