--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Apr 16, 2022
 
-Modified/Tested:  Apr 24, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 <!DOCTYPE html>
@@ -32,9 +32,8 @@ Modified/Tested:  Apr 24, 2022; Passed on Safari and Chrome browsers.
             <li><a href="about.html">About</a></li>
             <li><a href="project.html">Projects</a>
                 <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
+                    <li><a href="undergraduate_research.html">Undergraduate Research</a></li>
+                    <li><a href="school_project.html">School Projects</a></li>
                 </ul>
             </li>
             <li><a href="reflection.html">Reflections</a><li>
@@ -73,7 +72,9 @@ Modified/Tested:  Apr 24, 2022; Passed on Safari and Chrome browsers.
     </main>
     <footer>
         Author: Hosanna Tesfaye<br>
-        If you have any further questions, please contact: <a href="mailto:hhthk7@umsystem.edu">hhthk7@umsystem.edu</a><br>
+        If you have any further questions, feel free to reach out! <br>
+        <img src="images/mail.png" class="mail" alt="Mail">Email: <a href="mailto:hhthk7@umsystem.edu">Hosanna Tesfaye</a> at <a href="mailto:hhthk7@umsystem.edu">hhthk7@umsystem.edu</a><br>
+        <img src="images/phone.png" class="phone" alt="Telephone">Phone: 1+888-888-8888<br>
         &copy; Copyright 2022 Hosanna Tesfaye's Portfolio
     </footer>
 </body>
