--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -21,6 +21,12 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
         <title>Reflection</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="nav.css">
+        <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
+
+        <!-- Google Font: Roboto Stylesheet-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav id="nav_ham">
