--- a/islt_7310/school_project.html
+++ b/islt_7310/school_project.html
@@ -22,6 +22,7 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
         <title>About</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
+        <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
 
         <!-- Google Font: Roboto Stylesheet-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
