--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -74,8 +74,11 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
             <blockquote cite="https://ameliaearhart.com/quotes/"><em>The most effective way to do it is to do it.</em></blockquote>
             - Amelia Earhart
         <p class="credentials">
-            <a href="https://drive.google.com/file/d/1JXbeOKoQi3kTUWXR699QgJud2H9l7iNc/view?usp=sharing" target="_blank">Click here</a>
-            if you'd like to know more about me! <br>
+            Click the video if you'd like to hear a bit more about me!<br>
+            <video controls>
+                <iframe src="https://drive.google.com/file/d/1JXbeOKoQi3kTUWXR699QgJud2H9l7iNc/preview" width="640" height="480" allow="autoplay">
+                </iframe>
+            <br>
             Or, if you'd like to read my resume, <a href="Tesfayeresume.pdf" target="_blank">click here</a>.
         </p>
     </main>
