--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -75,8 +75,7 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
             - Amelia Earhart
         <p class="credentials">
             Click the video if you'd like to hear a bit more about me!<br>
-            <video controls>
-                <iframe src="https://drive.google.com/file/d/1JXbeOKoQi3kTUWXR699QgJud2H9l7iNc/preview" width="640" height="480" allow="autoplay">
+                <iframe src="https://drive.google.com/file/d/1JXbeOKoQi3kTUWXR699QgJud2H9l7iNc/preview" allow="autoplay">
                 </iframe>
             <br>
             Or, if you'd like to read my resume, <a href="Tesfayeresume.pdf" target="_blank">click here</a>.
