--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Mar 27, 2022
 
-Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 <!DOCTYPE html>
@@ -35,7 +35,7 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
             <label for="hamburger">&#9776;</label>
             <input type="checkbox" id="hamburger"/>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="project.html">Projects</a>
                     <ul>
@@ -51,6 +51,7 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
 
         <header>
             <h1>Home</h1>
+            <img src="E-weekPhoto.JPG" alt="Friendly face">
             <h3>Nice to meet you!</h3>
         </header>
 
