--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Apr 11, 2022
 
-Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 <!DOCTYPE html>
@@ -36,7 +36,7 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="project.html">Projects</a>
+            <li class="active"><a href="project.html">Projects</a>
                 <ul>
                     <li><a href="undergraduate_research.html">Undergraduate Research</a></li>
                     <li><a href="school_project.html">School Projects</a></li>
@@ -54,6 +54,11 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
     </header>
 
     <main>
+        <h4>Click the Adobe photo below if you wish to see my creations using Adobe Software!</h4>
+        <a href="school_project.html"><img src="F21Adobe.png"></a>
+
+        <h4>Click the photo below to learn more about my Undergraduate Research expreiences!</h4>
+        <a href="undergraduate_research.html"><img src="2021REU.gif"></a>
     </main>
     <footer>
         Author: Hosanna Tesfaye<br>
