--- a/islt_7310/school_project.html
+++ b/islt_7310/school_project.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Apr 28, 2022
 
-Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 
@@ -19,7 +19,7 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About</title>
+        <title>School Projects</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="nav.css">
         <link rel="shortcut icon" type="image/png" href="images/favicon.ico">
@@ -41,7 +41,7 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
                 <li><a href="project.html">Projects</a>
                     <ul>
                         <li><a href="undergraduate_research.html">Undergraduate Research</a></li>
-                        <li><a href="school_project.html">School Projects</a></li>
+                        <li class="active"><a href="school_project.html">School Projects</a></li>
                     </ul>
                 </li>
                 <li><a href="reflection.html">Reflections</a><li>
@@ -52,12 +52,37 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
 
         <header>
         <h1>My Academic Creations</h1>
-        <img src="HT_About.JPG" alt="Profile Pic">
-        <h3>Projects created from Computer Science & Information Technology</h3>
+        <h3>Projects created from Information Technology</h3>
         </header>
 
         <main>
+            <div class="class_project">
+        <h4>Adobe After Effects/Premiere</h4>
+        <p>The Adobe After Effects app is a great editor for creating motion graphics and visual effects.
+            It's a great tool for creating films, both in 2D and 3D! Below, I have videos of some of my previous project in my
+            Visual Design Classes such as: <br>
+            A 3D Biohazard logo that is in motion.<br>
+            A short video of 3D text with a light background.<br>
+            A mini-music video (w/o audio) of the chorus for the song "I Lived" by OneRepublic.<br>
+            A mini-film in which I alter the visual depth to blur the background to focus on the character entering the screen.
+        </p>
+        <iframe src="F21-3DText.mp4"></iframe>
+        <iframe src="3DBioHazard.mp4"></iframe><br>
+        <iframe src="S21Music.mp4"></iframe>
+        <iframe src="VisualDepth.mp4"></iframe><br>
 
+        <h4>Adobe Photoshop</h4>
+        <p>With the Adobe Photoshop editor, I could create 3D graphic images, 
+            edit photos to create new visual images, and create digital art! Below I haave attached links to digital 
+            art I have made such as a quilt pattern and a movie poster for a documentary based on the true events of the 2011
+            Joplin Tornado. <br>
+            <a href="S21Quilt.jpg" target="_blank">Click this link</a> to see the quilt design!<br>
+        
+        <a href="F21-MoviePoster.png" target="_blank">Click this link</a> to see the movie poster design!
+        </p>
+
+        <p><a href="project.html">Back to Projects Page</a></p>
+    </div>
         </main>
         <footer>
             Author: Hosanna Tesfaye<br>
