--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Apr 16, 2022
 
-Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 <!DOCTYPE html>
@@ -42,7 +42,7 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
                     <li><a href="school_project.html">School Projects</a></li>
                 </ul>
             </li>
-            <li><a href="reflection.html">Reflections</a><li>
+            <li class="active"><a href="reflection.html">Reflections</a><li>
             <li><a href="#">Contact</a></li>
         </ul>
     </div>
