--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -10,7 +10,7 @@ School/Term:  Mizzou University, Spring 2022
 
 Developed: Mar 24, 2022
 
-Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
+Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
 
 ******************************************************************************-->
 
@@ -37,7 +37,7 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
             <div id="hamburgeritems">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li class="active"><a href="about.html">About</a></li>
                 <li><a href="project.html">Projects</a>
                     <ul>
                         <li><a href="undergraduate_research.html">Undergraduate Research</a></li>
@@ -64,12 +64,19 @@ Modified/Tested:  Apr 28, 2022; Passed on Safari and Chrome browsers.
         flute, singing, and solving puzzles. I love to sit down and analyze all the puzzle pieces before I assemble the entire image piece by piece. 
         The feeling of completing the puzzle never fails to satisfy me.
         </p>
-        <p>
-            I am an Information Technology undergraduate senior studying at <em>Mizzou University</em> to earn my Bachelor of Science in the College of 
-            Engineering, along with a certificate in Media Design and Technology, Information Systems, and Cybersecurity. 
-            My anticipated graduation date for my undergraduate studies is in <b>December 2022</b>. Once I earn my Bachelor’s Degree, 
-            I plan to enroll in graduate school and earn a Master's in Information Technology with an emphasis in Cybersecurity. 
-            My aim is to work in computer network analysis <em>or</em> network administration, which are subfields of Cybersecurity.</p>
+        <h4>Education</h4>
+        <div class="education">
+        <ul>
+            <li>School: University of Missouri - Columbia</li>
+            <li>Grade: Senior</li>
+            <li>GPA: 3.46 / 4.00</li>
+            <li>Degree: Bachelor's of Science</li>
+            <li>Expected Graduation Date: December 2022</li>
+            <li>Undergraduate Certificates: Cybersecurity, Media Technology and Design, Information Systems</li>
+            <li>Career Goals: To make a successful career as a Network Administrator.</li>
+        </ul
+        ></div>
+
             <br>
             <blockquote cite="https://ameliaearhart.com/quotes/"><em>The most effective way to do it is to do it.</em></blockquote>
             - Amelia Earhart
