--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -55,10 +55,10 @@ Modified/Tested:  May 1, 2022; Passed on Safari and Chrome browsers.
 
     <main>
         <h4>Click the Adobe photo below if you wish to see my creations using Adobe Software!</h4>
-        <a href="school_project.html"><img src="F21Adobe.png"></a>
+        <a href="school_project.html"><img src="F21Adobe.png" alt="Adobe"></a>
 
         <h4>Click the photo below to learn more about my Undergraduate Research expreiences!</h4>
-        <a href="undergraduate_research.html"><img src="2021REU.gif"></a>
+        <a href="undergraduate_research.html"><img src="2021REU.gif" alt="2021REU"></a>
     </main>
     <footer>
         Author: Hosanna Tesfaye<br>
